Grey text on error popin

--- a/frontend/src/components/companies/companies.scss
+++ b/frontend/src/components/companies/companies.scss
@@ -48,7 +48,7 @@
         display: block;
         z-index: 2;
 
-        color: $pink;
+        color: $gray-font;
         font-size: 1.5em;
         line-height: 30px;
         background-color: white;
