--- a/frontend/src/style/constants.scss
+++ b/frontend/src/style/constants.scss
@@ -25,3 +25,6 @@ $gradient-background: linear-gradient(to top right, cyan, blue , purple, magenta
 // MAP/LIST SPACE REPARTITION
 $flex-left: 10;
 $flex-right: 5;
+
+// Box-shadow
+$box-shadow: 1px 5px 2px -2px #666;
