Add gray background for the company visited in the list

--- a/frontend/src/components/companies/companies.scss
+++ b/frontend/src/components/companies/companies.scss
@@ -292,6 +292,10 @@
             }
         }
 
+        &.visited {
+            background-color: lightgray;
+        }
+
         .icon { margin-right: 5px; vertical-align: middle; }
 
         .see-more {
