--- a/frontend/src/style/mixins.scss
+++ b/frontend/src/style/mixins.scss
@@ -338,3 +338,19 @@
         }
     }
 }
+
+
+@mixin mx-distance-chooser() {
+    max-width: 350px;
+    margin: 20px auto;
+    display: flex;
+    > li {
+        flex: 1;
+        input {
+            display: inline-block;
+            vertical-align: text-top;
+            margin-top: 3px;
+            margin-right: 5px;
+        }
+    }
+}
