--- a/frontend/src/style/global.scss
+++ b/frontend/src/style/global.scss
@@ -40,6 +40,7 @@ ul.list-no-margin-padding { margin: 0; padding: 0; }
 .no-break-word { white-space: nowrap; }
 .bold { font-weight: bold !important; }
 .max-size-1000 { max-width: 1000px; margin: auto; }
+.max-size-1200 { max-width: 1200px; margin: auto; }
 .img-responsive { max-width: 100%;}
 
 // responsive classes
