Create youtube lazyload-component
On home page, we add directly the Youtube iframe which cause requests to Youtube - 550Ko of data ! - and most of the time for nothing !
To avoid these requests, we replace the iframe by a button with background image and on click, we add the iframe to the DOM.

--- a/frontend/src/style/global.scss
+++ b/frontend/src/style/global.scss
@@ -57,6 +57,11 @@ button {
     &:hover { cursor: pointer; }
 }
 
+button.reset {
+    border: none;
+    background: none;
+}
+
 button.close {
     border: none;
     background: none;
