--- a/frontend/src/style/mixins.scss
+++ b/frontend/src/style/mixins.scss
@@ -235,7 +235,7 @@
         position: relative;
         top: 50px;
         width: 98%;
-        margin: 0 auto 50px auto;
+        margin: 0 auto 0 auto;
         max-width: 1000px;
         background: white;
         overflow-y: auto;
@@ -288,6 +288,7 @@
         background: black;
         text-align: center;
         padding: 10px 0;
+        margin-top: 20px;
         a {
             color: white;
             text-decoration: none;
