Delete 2 css property removed by shorthand after

--- a/frontend/src/style/global.scss
+++ b/frontend/src/style/global.scss
@@ -627,7 +627,7 @@ header#global-header {
     margin-bottom: 150px;
 
     h1 { color: $blue; font-size: 1.5em; margin: 20px 0; }
-    h2 { color: black; margin-bottom: 10px; font-size: 1.2em; margin: 20px 0; }
+    h2 { color: black; font-size: 1.2em; margin: 20px 0; }
     h3, h4 { color: black; margin: 10px 0; }
     ul, ol { padding-left: 40px; }
     p { word-wrap: break-word; }
