--- a/frontend/src/components/companies/companies.scss
+++ b/frontend/src/components/companies/companies.scss
@@ -132,6 +132,7 @@
 #map-results {
     height: 100vh;
     width: 100%;
+    position: relative;
     flex: $flex-left;
     transition: opacity 0.2s ease;
 
