Fix CSS issue on home for GoogleBot

--- a/frontend/src/components/form/form.scss
+++ b/frontend/src/components/form/form.scss
@@ -58,7 +58,7 @@ $submit-width: 340px;
         max-width: 850px;
 
         // Avoid superposition with fixed footer
-        margin-bottom: 135px;
+        padding-bottom: 135px;
 
         text-align: center;
         color: white;
