--- a/frontend/src/components/home/home.scss
+++ b/frontend/src/components/home/home.scss
@@ -116,10 +116,7 @@
     }
 
     section.main-landing {
-        position: absolute;
-        top: 0; left: 0; right: 0; bottom: 0;
-        height: 960px; /* For old browser compatibility */
-        height: 100vh;
+        height: 100%;
 
         .footer {
             position: absolute;
@@ -174,8 +171,7 @@
 
     .more {
         position: absolute;
-        top: 960px; /* For old browser compatibility */
-        top: 100vh; left: 0; right: 0;
+        top: 100%; left: 0; right: 0;
 
         @media (max-height: 400px) { top: 110%; }
 
