Add attribution on result map

--- a/frontend/src/components/companies/companies.scss
+++ b/frontend/src/components/companies/companies.scss
@@ -204,11 +204,11 @@
         }
     }
 
-    .leaflet-control-attribution {
+    /*.leaflet-control-attribution {
         position: absolute;
         left: -10000px;
         top: -10000px;
-    }
+    }*/
 }
 
 
